# bthome-watermeter

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
src/: CMakeLists.txt  bluetooth.cpp  bluetooth.h  main.cpp  ulp.cpp  ulp.h
src/bthome/: advertisement.cpp  advertisement.h  constants.cpp  constants.h  measurement.cpp  measurement.h
tools/: pyproject.toml
tools/src/: py_to_constansts.py
ulp/: pulse_cnt.S
